resource-limits.yml
apiVersion: v1
kind: Pod
metadata:
  name: resource-demo-pod
  labels:
    app: demo
spec:
  containers:
    - name: demo-container
      image: nginx
      resources:
        requests:
          cpu: "250m"       # 0.25 of a CPU core
          memory: "128Mi"   # Minimum memory guaranteed
        limits:
          cpu: "500m"       # Max CPU (half a core)
          memory: "256Mi"   # Max Memory
