startupprobe.yml
apiVersion: v1
kind: Pod
metadata:
  name: startup-pod
spec:
  containers:
    - name: slow-app
      image: busybox
      command: ["sh", "-c", "sleep 30 && echo App started && httpd -f -h /usr/share/nginx/html"]
      startupProbe:
        exec:
          command:
            - cat
            - /usr/share/nginx/html/index.html
        initialDelaySeconds: 5
        periodSeconds: 5
        failureThreshold: 10
      livenessProbe:
        httpGet:
          path: /
          port: 80
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: /
          port: 80
        periodSeconds: 10
